--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,5 @@ serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 tokio = { version = "1.45.1", features = ["full"] }
 tokio-stream = "0.1.17"
+tower = { version = "0.5.2", features = ["util"] }
 webbrowser = "1.0.4"
